--- a/Develop/index.html
+++ b/Develop/index.html
@@ -34,7 +34,7 @@
         <!-- CONTENT SECTION -->
         <section class="content">
             <article id="search-engine-optimization" class="search-engine-optimization">
-                <img src="./assets/images/search-engine-optimization.jpg" alt="various office items on a desk" class="float-left" />
+                <img src="./assets/images/search-engine-optimization.jpg" alt="various office items on a wooden background" class="float-left" />
                 <h2>Search Engine Optimization</h2>
                 <p>
                     The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -42,7 +42,7 @@
             </article>
 
             <article id="online-reputation-management" class="online-reputation-management">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="man sitting at a table with a laptop that reads 'REPUTATION' with a graph"/>
                 <h2>Online Reputation Management</h2>
                 <p>
                     The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -50,7 +50,7 @@
             </article>
 
             <article id="social-media-marketing" class="social-media-marketing">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Six people at a table with various icon images on the table"/>
                 <h2>Social Media Marketing</h2>
                 <p>
                     Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -62,7 +62,7 @@
         <section class="benefits">
             <article class="benefit-lead">
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" />
+                <img src="./assets/images/lead-generation.png" alt="gear filtering down to '$' icon"/>
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
@@ -70,7 +70,7 @@
 
             <article class="benefit-brand">
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" />
+                <img src="./assets/images/brand-awareness.png" alt="body with light bulb as a head"/>
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
@@ -78,7 +78,7 @@
 
             <article class="benefit-cost">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png"></img>
+                <img src="./assets/images/cost-management.png" alt="gear with '$' icons around it"></img>
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
