Condensed CSS functions that repeated twice or more. Left the specific html classes those functions referenced for possible future styling

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -28,7 +28,7 @@
             </div>
         </section>
 
-        <!-- HERO -->
+        <!-- HERO SECTION -->
         <section class="hero"></section>
 
         <!-- CONTENT SECTION -->
