--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,7 @@
 </head>
 
     <body>
-        <!-- HEADER -->
+        <!-- HEADER START -->
         <section class="header">
             <h1>Hori<span class="seo">seo</span>n</h1>
             <div>
@@ -27,11 +27,13 @@
                 </ul>
             </div>
         </section>
+        <!-- HEADER END -->
 
-        <!-- HERO SECTION -->
+        <!-- HERO START -->
         <section class="hero"></section>
+        <!-- HERO END -->
 
-        <!-- CONTENT SECTION -->
+        <!-- CONTENT START -->
         <section class="content">
             <article id="search-engine-optimization" class="search-engine-optimization">
                 <img src="./assets/images/search-engine-optimization.jpg" alt="various office items on a wooden background" class="float-left" />
@@ -57,8 +59,9 @@
                 </p>
             </article>
         </section>
+        <!-- CONTENT END -->
         
-        <!-- BENEFITS SECTION -->
+        <!-- BENEFITS START -->
         <section class="benefits">
             <article class="benefit-lead">
                 <h2>Lead Generation</h2>
@@ -84,13 +87,15 @@
                 </p>
             </article>
         </section>
+        <!-- BENEFITS END -->
 
-        <!-- FOOTER -->
+        <!-- FOOTER START -->
         <section class="footer">
             <h2>Made with ❤️️ by Horiseon</h2>
             <p>
                 &copy; 2019 Horiseon Social Solution Services, Inc.
             </p>
         </section>
+        <!-- FOOTER END -->
     </body>
 </html>
